--- a/frontend/src/components/verification/Start.css
+++ b/frontend/src/components/verification/Start.css
@@ -2,7 +2,7 @@
   /* background: radial-gradient(ellipse, rgba(255, 255, 255, 0.5) 10%, #0d0d0d, #0d0d0d, #0d0d0d); */
   background: radial-gradient(
     ellipse,
-    rgba(91, 33, 182, 0.3) 50%,
+    rgba(91, 33, 182, 0.25) 50%,
     #f1f1f1,
     #f1f1f1,
     #f1f1f1
@@ -11,7 +11,7 @@
   animation: movement 10s infinite linear;
   left: 50%;
   right: 50%;
-  border: 2px solid yellow;
+  /* border: 2px solid yellow; */
   transform: translate(-50%, -50%);
   /* background-color: red; */
 }
